# killabeez

./: Cargo.toml  README.md  sshpools.toml  swarm.toml
src/: aws.rs  beez.rs  cli.rs  config.rs  main.rs  scenarios.rs  ssh.rs
src/actions/: commands.rs  mod.rs  plans.rs
src/aws/: ec2.rs  errors.rs  mod.rs  scenarios.rs  tagged.rs
src/ssh/: client.rs  errors.rs  files.rs  io.rs  logger.rs  mod.rs  output.rs  pools.rs
