[package]
name = "killabeez"
version = "0.1.0"
edition = "2024"

[dependencies]
async-ssh2-tokio = { version = "0.8.12", features = ["openssl"] }
aws-config = "1.5.17"
aws-sdk-ec2 = "1.112.0"
clap = { version = "4.5.30", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
